v0.4.1: initial commit after merge